Ajout Readme + propriété api.url

--- a/org.leo.traceroute/src/org/leo/traceroute/resources/static.properties
+++ b/org.leo.traceroute/src/org/leo/traceroute/resources/static.properties
@@ -7,3 +7,4 @@ support.url=https://sourceforge.net/projects/openvisualtrace/
 facebook.url=https://www.facebook.com/openvisualtraceroute
 website.url=http://visualtraceroute.net/
 dynamic.conf.url=http://raw.githubusercontent.com/leolewis/openvisualtraceroute/master/org.leo.traceroute/DynConf.properties
+api.url=http://127.0.0.1:8000/api
